// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description renders correctly 1`] = `
<DocumentFragment>
  .cache-mua0hn {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-mua0hn .eu9mc5y1+.eu9mc5y2 {
  margin-top: 16px;
}

.cache-dvxaym {
  font-weight: 500;
  color: #151a2d;
}

.cache-dvxaym:after {
  content: ':';
}

.cache-4i90ne {
  color: #4a4f62;
  margin: 0;
  margin-top: 8px;
}

<dl
    class="eu9mc5y0 cache-mua0hn"
  >
    <dt
      class="eu9mc5y2 cache-dvxaym"
    >
      Name
    </dt>
    <dd
      class="eu9mc5y1 cache-4i90ne"
    >
      Big instance
    </dd>
    <dt
      class="eu9mc5y2 cache-dvxaym"
    >
      Size
    </dt>
    <dd
      class="eu9mc5y1 cache-4i90ne"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly inline 1`] = `
<DocumentFragment>
  .cache-j0kbsd {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-j0kbsd .eu9mc5y1+.eu9mc5y2 {
  margin-top: 16px;
}

.cache-j0kbsd>.eu9mc5y2 {
  float: left;
  clear: left;
  margin-right: 8px;
}

.cache-j0kbsd>.eu9mc5y1 {
  margin-top: 0;
}

.cache-j0kbsd .eu9mc5y1+.eu9mc5y2+.eu9mc5y1 {
  margin-top: 16px;
}

.cache-dvxaym {
  font-weight: 500;
  color: #151a2d;
}

.cache-dvxaym:after {
  content: ':';
}

.cache-4i90ne {
  color: #4a4f62;
  margin: 0;
  margin-top: 8px;
}

<dl
    class="eu9mc5y0 cache-j0kbsd"
  >
    <dt
      class="eu9mc5y2 cache-dvxaym"
    >
      Name
    </dt>
    <dd
      class="eu9mc5y1 cache-4i90ne"
    >
      Big instance
    </dd>
    <dt
      class="eu9mc5y2 cache-dvxaym"
    >
      Size
    </dt>
    <dd
      class="eu9mc5y1 cache-4i90ne"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly seletable 1`] = `
<DocumentFragment>
  .cache-1g7xy3u {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-1g7xy3u .eu9mc5y1+.eu9mc5y2 {
  margin-top: 16px;
}

.cache-1g7xy3u>.eu9mc5y2 {
  float: left;
  clear: left;
  margin-right: 8px;
}

.cache-1g7xy3u>.eu9mc5y1 {
  margin-top: 0;
}

.cache-1g7xy3u .eu9mc5y1+.eu9mc5y2+.eu9mc5y1 {
  margin-top: 16px;
}

.cache-1g7xy3u>.eu9mc5y1 {
  -webkit-user-select: all;
  -moz-user-select: all;
  -ms-user-select: all;
  user-select: all;
}

.cache-1g7xy3u>.eu9mc5y1::selection {
  color: #ffffff;
  background: #4f0599;
}

.cache-dvxaym {
  font-weight: 500;
  color: #151a2d;
}

.cache-dvxaym:after {
  content: ':';
}

.cache-4i90ne {
  color: #4a4f62;
  margin: 0;
  margin-top: 8px;
}

<dl
    class="eu9mc5y0 cache-1g7xy3u"
  >
    <dt
      class="eu9mc5y2 cache-dvxaym"
    >
      Name
    </dt>
    <dd
      class="eu9mc5y1 cache-4i90ne"
    >
      Big instance
    </dd>
    <dt
      class="eu9mc5y2 cache-dvxaym"
    >
      Size
    </dt>
    <dd
      class="eu9mc5y1 cache-4i90ne"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;
